# Advanced-Evaluation-of-Biomechanical-Simulators

./: Advanced-Evaluation-of-Biomechanical-Simulators-for-Surgical-Training-Applications  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cgogn/core/types/maps/cmap/: cmap2.cpp  cmap2.h
cgogn/geometry/: CMakeLists.txt
cgogn/geometry/algos/: invertion.h  volume.h
cgogn/geometry/includes/: core_prerequisites.h
cgogn/geometry/rapidjson/: document.h
cgogn/geometry/rttr/: access_levels.h  argument.h  array_range.h  associative_mapper.h  constructor.h  destructor.h  enum_flags.h  enumeration.h  filter_item.h  instance.h  library.h  method.h  parameter_info.h  policy.h  property.h  registration  registration.h  rttr_cast.h  rttr_enable.h  sequential_mapper.h  string_view.h  type.h  type_list.h  variant.h  variant_associative_view.h  variant_sequential_view.h  visitor.h  wrapper_mapper.h
cgogn/geometry/rttr/detail/base/: core_prerequisites.h
cgogn/geometry/rttr/detail/comparison/: comparable_types.h  compare_array_equal.h  compare_array_equal_impl.h  (+6 more)
cgogn/io/: CMakeLists.txt
cgogn/io/reflect/: read_error.hpp  reflect.hpp  substring.hpp
cgogn/io/reflect/examples/: basics.cpp
cgogn/rendering/: shader_program.h  types.h
cgogn/rendering/apps/: CMakeLists.txt  simple_volume_viewer.cpp  test_shape.cpp
cgogn/rendering/shaders/: shader_frame2d.h
cgogn/simulation/: CMakeLists.txt
cgogn/simulation/algos/: SPH.cpp  SPH.h
cgogn/simulation/algos/XPBD/: XPBD.cpp  XPBD.h  from_json.cpp  main.cpp  to_json.cpp  to_json.h
cgogn/simulation/algos/shallow_water/: shallow_water.h
cgogn/simulation/apps/: CMakeLists.txt  Script_.cpp  armadillo_scale.mesh  basics.cpp  run_sph.cpp  shape_matching.cpp  test_ball.cpp
cgogn/simulation/json_serialization/: from_json.h  main.cpp
cgogn/simulation/ui_modules/: SPH.h  XPBD.h
cgogn/ui/: CMakeLists.txt  app.cpp  app.h
cmake/: utilities.cmake
(+85 files in other folders)
